Adding monitoring with Prometheus and actuator

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,13 @@ dependencies {
 	implementation('org.springframework.cloud:spring-cloud-starter-consul-config')
 	//Zuul - Reverse Proxy
 	implementation('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
+	//Monitoring
+	implementation(
+	'io.micrometer:micrometer-core:latest.release',
+	'io.micrometer:micrometer-registry-prometheus:latest.release',
+	'org.springframework.boot:spring-boot-starter-actuator')
+	
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('io.projectreactor:reactor-test')
 	testImplementation('org.springframework.security:spring-security-test')
