--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-security.oauth2.client.client-id={clientId}
-security.oauth2.client.client-secret={clientSecret}
-security.oauth2.client.access-token-uri=https://{apigateway}/oauth2/default/v1/token
-security.oauth2.client.user-authorization-uri=https://{apigateway}/oauth2/default/v1/authorize
-security.oauth2.client.scope=openid profile email
-security.oauth2.resource.user-info-uri=https://{apigateway}/oauth2/default/v1/userinfo
+security.oauth2.client.client-id=7d72ecb1-ce1d-4815-8fce-0198dd83c8c4
+security.oauth2.client.client-secret=aeb8f080-98b7-488d-bd10-8d26fedeef2d
+security.oauth2.client.access-token-uri=https://https://10.175.0.168:443/auth/oauth2/default/v2/token
+security.oauth2.client.user-authorization-uri=https://https://10.175.0.168:443/auth/oauth2/default/v2/authorize
+security.oauth2.client.scope=oob
+security.oauth2.resource.user-info-uri=https://https://10.175.0.168:443/auth/oauth2/default/v2/userinfo
