--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ security.oauth2.client.access-token-uri=https://https://10.175.0.168:443/auth/oa
 security.oauth2.client.user-authorization-uri=https://https://10.175.0.168:443/auth/oauth2/default/v2/authorize
 security.oauth2.client.scope=oob
 security.oauth2.resource.user-info-uri=https://https://10.175.0.168:443/auth/oauth2/default/v2/userinfo
+
+zuul.routes.apis.path: /apis/**
+zuul.routes.apis.url: https://dev.mapfreapis.com/mapfre
+
+zuul.routes.home.path: /auth/**
+zuul.routes.home.url: https://https://10.175.0.168:443/auth
+
+zuul.sensitive-headers: Cookie,Set-Cookie
