--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,89 @@
 buildscript {
 	ext {
-		springBootVersion = '2.1.0.RELEASE'
+		springBootVersion = '2.0.3.RELEASE'
 	}
 	repositories {
 		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
+		classpath("io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE")
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
+plugins{
+	id 'java'
+}
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.mapfre.customerportal'
+group = 'com.mapfre.apis'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+	maven { url "https://repo.spring.io/plugins-release" }
 }
 
-
 ext {
-	springCloudVersion = 'Greenwich.BUILD-SNAPSHOT'
+	set('springCloudVersion', 'Finchley.RELEASE')
+	set('springCloudServices','2.0.1.RELEASE')
 }
 
 dependencies {
-	//OAuth2
-	compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springBootVersion}")
-	implementation('org.springframework.boot:spring-boot-starter-security')
-	//Webflux
-	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	//Consul
-	implementation('org.springframework.cloud:spring-cloud-starter-consul-config')
-	//Zuul - Reverse Proxy
-	implementation('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
-	//Monitoring
-	implementation(
+	compile(
+	// Monitoring
 	'io.micrometer:micrometer-core:latest.release',
 	'io.micrometer:micrometer-registry-prometheus:latest.release',
-	'org.springframework.boot:spring-boot-starter-actuator')
+	'org.springframework.boot:spring-boot-starter-actuator',
+	'org.springframework.boot:spring-boot-starter-webflux',
+	'org.springframework.cloud:spring-cloud-starter-gateway',
+	'org.springframework.security:spring-security-core',
 	
+	//Logging 
+	'org.springframework.boot:spring-boot-starter-log4j2',
 	
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testImplementation('io.projectreactor:reactor-test')
-	testImplementation('org.springframework.security:spring-security-test')
+	//Spring Cloud - Sleuth - Zipkin - Tracing
+	'org.springframework.cloud:spring-cloud-starter-sleuth',
+	'org.springframework.cloud:spring-cloud-sleuth-zipkin',
+	'org.springframework.cloud:spring-cloud-sleuth-core',
+	'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
+	'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+	
+	testCompile('org.springframework.boot:spring-boot-starter-test',
+	'io.projectreactor:reactor-test')
+}
+
+configurations {
+	all {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+		exclude group: 'org.springframework.boot', module: 'logback-classic'
+		exclude group: 'org.springframework.boot', module: 'jersey-client'
+		exclude group: 'org.springframework.boot', module: 'jersey-core'
+		exclude group: 'org.springframework.boot', module: 'jersey-apache-client4'
+	}
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServices}"
 	}
 }
+
+// Runnable Jar
+bootJar {
+	baseName = 'gateway'
+	version =  '1.0.0'
+}
+
+jar {
+	enabled =true
+	manifest { attributes 'Main-Class': 'com.mapfre.apis.GatewayApplication' }
+}
+
+
