adding dependencies to gateway

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,7 @@ applications:
   instances: 1
   services:
   - service-discovery
+  - auth-server
+  - config-server
   path: build/libs/gateway-1.0.0.jar
 
