--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,11 @@ dependencies {
 	'org.springframework.cloud:spring-cloud-starter-sleuth',
 	'org.springframework.cloud:spring-cloud-sleuth-zipkin',
 	'org.springframework.cloud:spring-cloud-sleuth-core',
+	//credhub
+	'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
+	//Security
+	'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
+	// PCF Specific Dependencies
 	'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
 	'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	
