--- a/build.gradle
+++ b/build.gradle
@@ -49,29 +49,29 @@ ext {
 
 dependencies {
 	compile(
-	// Monitoring
-	'io.micrometer:micrometer-core:latest.release',
-	'io.micrometer:micrometer-registry-prometheus:latest.release',
-	'org.springframework.boot:spring-boot-starter-actuator',
-	'org.springframework.boot:spring-boot-starter-webflux',
-	'org.springframework.cloud:spring-cloud-starter-gateway',
-	//'org.springframework.security:spring-security-core',
-	
-	//Logging 
-	'org.springframework.boot:spring-boot-starter-log4j2',
-	
-	//Spring Cloud - Sleuth - Zipkin - Tracing
-	'org.springframework.boot:spring-boot-starter',
-	'org.springframework.cloud:spring-cloud-starter-sleuth',
-	'org.springframework.cloud:spring-cloud-sleuth-zipkin',
-	'org.springframework.cloud:spring-cloud-sleuth-core',
-	//credhub
-	'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
-	//Security
-	'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
-	// PCF Specific Dependencies
-	'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
-	'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+			// Monitoring
+			'io.micrometer:micrometer-core:latest.release',
+			'io.micrometer:micrometer-registry-prometheus:latest.release',
+			'org.springframework.boot:spring-boot-starter-actuator',
+			'org.springframework.boot:spring-boot-starter-webflux',
+			'org.springframework.cloud:spring-cloud-starter-gateway',
+			//'org.springframework.security:spring-security-core',
+			
+			//Logging 
+			'org.springframework.boot:spring-boot-starter-log4j2',
+			
+			//Spring Cloud - Sleuth - Zipkin - Tracing
+			'org.springframework.boot:spring-boot-starter',
+			'org.springframework.cloud:spring-cloud-starter-sleuth',
+			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
+			'org.springframework.cloud:spring-cloud-sleuth-core',
+			//credhub
+			'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
+			//Security
+			'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
+			// PCF Specific Dependencies
+			'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
+			//'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	
 	testCompile('org.springframework.boot:spring-boot-starter-test',
 			'org.springframework.security:spring-security-test',
@@ -84,6 +84,7 @@ dependencies {
 configurations {
 	all {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 		exclude group: 'org.springframework.boot', module: 'logback-classic'
 		exclude group: 'org.springframework.boot', module: 'jersey-client'
 		exclude group: 'org.springframework.boot', module: 'jersey-core'
