--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -14,7 +14,7 @@ spring:
     user:
       password: password
   application:
-    name: gateway
+    name: customer-portal-bff
   cloud:
     gateway:
       discovery:
