--- a/manifest.yml
+++ b/manifest.yml
@@ -6,5 +6,5 @@ applications:
   - service-discovery
   - auth-service
   - config-server
-  path: build/libs/gateway-1.0.0.jar
+  path: build/libs/customer-portal-bff-1.0.0.jar
 
