--- a/build.gradle
+++ b/build.gradle
@@ -65,8 +65,6 @@ dependencies {
 			'org.springframework.cloud:spring-cloud-starter-sleuth',
 			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
 			'org.springframework.cloud:spring-cloud-sleuth-core',
-			//Service Discovery/Registry
-			'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client',
 			//credhub
 			'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
 			//Security
@@ -87,6 +85,7 @@ configurations {
 	all {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+		exclude group: 'org.springframework.cloud', module: 'spring-cloud-netflix-eureka-server'
 		exclude group: 'org.springframework.boot', module: 'logback-classic'
 		exclude group: 'org.springframework.boot', module: 'jersey-client'
 		exclude group: 'org.springframework.boot', module: 'jersey-core'
