--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.1.1.RELEASE'
-		asciidoctorPluginVersion = '1.5.3'
+		springBootVersion = '2.1.2.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -9,24 +8,15 @@ buildscript {
 	dependencies {
 		classpath("io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE")
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2")
-		classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciidoctorPluginVersion}")
-		classpath("io.github.swagger2markup:swagger2markup-gradle-plugin:1.3.3")
 	}
 }
 
 plugins{
 	id 'java'
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'jacoco'
-apply plugin: 'org.sonarqube'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'io.github.swagger2markup'
+
 group = 'com.mapfre.apis'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -40,52 +30,44 @@ repositories {
 }
 
 ext {
-	springCloudVersion = 'Greenwich.RC2'
-	springCloudServices = '2.0.3.RELEASE'
-	snippetsDir = file('build/generated-snippets')
-	htmlsDir = file('build/asciidoc/html5')
-	asciiDocOutputDir = file('build/swagger/generated')
+	set('springCloudVersion', 'Finchley.RELEASE')
+	set('springCloudServices','2.0.1.RELEASE')
 }
 
 dependencies {
 	compile(
-			// Monitoring
-			'io.micrometer:micrometer-core:latest.release',
-			'io.micrometer:micrometer-registry-prometheus:latest.release',
-			'org.springframework.boot:spring-boot-starter-actuator',
-			'org.springframework.boot:spring-boot-starter-webflux',
-			'org.springframework.cloud:spring-cloud-starter-gateway',
-			//'org.springframework.security:spring-security-core',
-			
-			//Logging 
-			'org.springframework.boot:spring-boot-starter-log4j2',
-			
-			//Spring Cloud - Sleuth - Zipkin - Tracing
-			'org.springframework.boot:spring-boot-starter',
-			'org.springframework.cloud:spring-cloud-starter-sleuth',
-			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
-			'org.springframework.cloud:spring-cloud-sleuth-core',
-			//credhub
-			'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
-			//Security
-			'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
-			// PCF Specific Dependencies
-			'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
-			'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+	// Monitoring
+	'io.micrometer:micrometer-core:latest.release',
+	'io.micrometer:micrometer-registry-prometheus:latest.release',
+	'org.springframework.boot:spring-boot-starter-actuator',
+	'org.springframework.boot:spring-boot-starter-webflux',
+	'org.springframework.cloud:spring-cloud-starter-gateway',
+	//'org.springframework.security:spring-security-core',
+	'org.springframework.boot:spring-boot-starter-security',
+	'org.springframework.boot:spring-boot-starter-oauth2-client',
+	
+	
+	//Logging 
+	'org.springframework.boot:spring-boot-starter-log4j2',
+	
+	//Spring Cloud - Sleuth - Zipkin - Tracing
+	'org.springframework.cloud:spring-cloud-starter-sleuth',
+	'org.springframework.cloud:spring-cloud-sleuth-zipkin',
+	'org.springframework.cloud:spring-cloud-sleuth-core',
+	//credhub
+	//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
+	//Security
+	//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
+	//'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
+	'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	
 	testCompile('org.springframework.boot:spring-boot-starter-test',
-			'org.springframework.security:spring-security-test',
-			'io.rest-assured:rest-assured:3.1.0',
-			'org.springframework.restdocs:spring-restdocs-restassured',
-			'io.projectreactor:reactor-test:3.1.0.RELEASE',
-			'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE')
+	'io.projectreactor:reactor-test')
 }
 
 configurations {
 	all {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-		exclude group: 'org.springframework.cloud', module: 'spring-cloud-netflix-eureka-server'
 		exclude group: 'org.springframework.boot', module: 'logback-classic'
 		exclude group: 'org.springframework.boot', module: 'jersey-client'
 		exclude group: 'org.springframework.boot', module: 'jersey-core'
@@ -110,5 +92,3 @@ jar {
 	enabled =true
 	manifest { attributes 'Main-Class': 'com.mapfre.apis.GatewayApplication' }
 }
-
-
