--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,6 @@ applications:
   services:
   - service-discovery
   - config-server
+  - auth-service
   path: build/libs/customer-portal-bff-1.0.0.jar
 
