--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,13 @@
 buildscript {
-	ext {
-		springBootVersion = '2.1.2.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
+	ext { springBootVersion = '2.1.1.RELEASE' }
+	repositories { mavenCentral() }
 	dependencies {
 		classpath("io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE")
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
-plugins{
-	id 'java'
-}
+plugins{ id 'java' }
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -30,44 +24,66 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', 'Finchley.RELEASE')
-	set('springCloudServices','2.0.1.RELEASE')
+	set('springCloudVersion', 'Greenwich.RC2')
+	set('springCloudServices','2.0.3.RELEASE')
 }
 
 dependencies {
 	compile(
-	// Monitoring
-	'io.micrometer:micrometer-core:latest.release',
-	'io.micrometer:micrometer-registry-prometheus:latest.release',
-	'org.springframework.boot:spring-boot-starter-actuator',
-	'org.springframework.boot:spring-boot-starter-webflux',
-	'org.springframework.cloud:spring-cloud-starter-gateway',
-	//'org.springframework.security:spring-security-core',
-	'org.springframework.boot:spring-boot-starter-security',
-	'org.springframework.boot:spring-boot-starter-oauth2-client',
-	
-	
-	//Logging 
-	'org.springframework.boot:spring-boot-starter-log4j2',
-	
-	//Spring Cloud - Sleuth - Zipkin - Tracing
-	'org.springframework.cloud:spring-cloud-starter-sleuth',
-	'org.springframework.cloud:spring-cloud-sleuth-zipkin',
-	'org.springframework.cloud:spring-cloud-sleuth-core',
-	//credhub
-	//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
-	//Security
-	//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
-	//'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
-	'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
-	
+			'org.springframework.boot:spring-boot-starter',
+
+			//Spring Cloud - Sleuth - Zipkin - Tracing
+			'org.springframework.cloud:spring-cloud-starter-sleuth',
+			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
+			'org.springframework.cloud:spring-cloud-sleuth-core',
+			
+			// Reactive Streams - Reactor 3
+			'org.cloudfoundry:cloudfoundry-client-reactor:2.0.0.BUILD-SNAPSHOT',
+			'io.projectreactor:reactor-core',
+			'io.projectreactor.netty:reactor-netty:0.8.3.RELEASE',
+			'org.springframework.boot:spring-boot-starter-webflux',
+		
+			// Monitoring
+			'io.micrometer:micrometer-core:latest.release',
+			'io.micrometer:micrometer-registry-prometheus:latest.release',
+			'org.springframework.boot:spring-boot-starter-actuator',
+			'org.springframework.cloud:spring-cloud-starter-gateway',
+			//'org.springframework.security:spring-security-core',
+			'org.springframework.boot:spring-boot-starter-security',
+
+			//'org.springframework.boot:spring-boot-starter-oauth2-client',
+
+			// Reactive Streams - Reactor 3
+			'org.cloudfoundry:cloudfoundry-client-reactor:2.0.0.BUILD-SNAPSHOT',
+			'io.projectreactor:reactor-core',
+			'io.projectreactor.netty:reactor-netty:0.8.3.RELEASE',
+
+
+			//Logging
+			'org.springframework.boot:spring-boot-starter-log4j2',
+
+			//credhub
+			//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
+			//Security
+			//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
+
+			//credhub
+			//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
+			//Security
+			//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
+			//'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
+			'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test',
-	'io.projectreactor:reactor-test')
+			'io.projectreactor:reactor-test')
 }
 
 configurations {
 	all {
+		//exclude group: 'org.springframework.security', module: 'spring-security-web'
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+		//exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
 		exclude group: 'org.springframework.boot', module: 'logback-classic'
 		exclude group: 'org.springframework.boot', module: 'jersey-client'
 		exclude group: 'org.springframework.boot', module: 'jersey-core'
