--- a/build.gradle
+++ b/build.gradle
@@ -1,102 +1,53 @@
 buildscript {
-	ext { springBootVersion = '2.1.1.RELEASE' }
-	repositories { mavenCentral() }
+	ext {
+		springBootVersion = '2.1.1.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
 	dependencies {
-		classpath("io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE")
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
-plugins{ id 'java' }
+group = 'com.mapfre.apis'
+version = '0.0.1-SNAPSHOT'
+
+
+apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.mapfre.apis'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
+	mavenLocal()
+	maven { url "https://repo.spring.io/libs-snapshot" }
+	maven { url "https://repo.spring.io/libs-milestone" }
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
-	maven { url "https://repo.spring.io/plugins-release" }
-}
-
-ext {
-	set('springCloudVersion', 'Greenwich.RC2')
-	set('springCloudServices','2.0.3.RELEASE')
-}
-
-dependencies {
-	compile(
-			'org.springframework.boot:spring-boot-starter',
-
-			//Spring Cloud - Sleuth - Zipkin - Tracing
-			'org.springframework.cloud:spring-cloud-starter-sleuth',
-			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
-			'org.springframework.cloud:spring-cloud-sleuth-core',
-			
-			// Reactive Streams - Reactor 3
-			'org.cloudfoundry:cloudfoundry-client-reactor:2.0.0.BUILD-SNAPSHOT',
-			'io.projectreactor:reactor-core',
-			'io.projectreactor.netty:reactor-netty:0.8.3.RELEASE',
-			'org.springframework.boot:spring-boot-starter-webflux',
-		
-			// Monitoring
-			'io.micrometer:micrometer-core:latest.release',
-			'io.micrometer:micrometer-registry-prometheus:latest.release',
-			'org.springframework.boot:spring-boot-starter-actuator',
-			'org.springframework.cloud:spring-cloud-starter-gateway',
-			//'org.springframework.security:spring-security-core',
-			'org.springframework.boot:spring-boot-starter-security',
-
-			//'org.springframework.boot:spring-boot-starter-oauth2-client',
-
-			// Reactive Streams - Reactor 3
-			'org.cloudfoundry:cloudfoundry-client-reactor:2.0.0.BUILD-SNAPSHOT',
-			'io.projectreactor:reactor-core',
-			'io.projectreactor.netty:reactor-netty:0.8.3.RELEASE',
-
-
-			//Logging
-			'org.springframework.boot:spring-boot-starter-log4j2',
-
-			//credhub
-			//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
-			//Security
-			//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
-
-			//credhub
-			//'org.springframework.credhub:spring-credhub-starter:2.0.0.RELEASE',
-			//Security
-			//'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE',
-			//'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client',
-			'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
-
-	testCompile('org.springframework.boot:spring-boot-starter-test',
-			'io.projectreactor:reactor-test')
-}
-
-configurations {
-	all {
-		//exclude group: 'org.springframework.security', module: 'spring-security-web'
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-		//exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
-		exclude group: 'org.springframework.boot', module: 'logback-classic'
-		exclude group: 'org.springframework.boot', module: 'jersey-client'
-		exclude group: 'org.springframework.boot', module: 'jersey-core'
-		exclude group: 'org.springframework.boot', module: 'jersey-apache-client4'
-	}
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServices}"
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Greenwich.BUILD-SNAPSHOT'
 	}
 }
+
+dependencies {
+	compile("org.springframework.boot:spring-boot-starter-webflux",
+			"org.springframework.boot:spring-boot-starter-oauth2-client",
+			"org.springframework.cloud:spring-cloud-starter-gateway",
+			"org.springframework.cloud:spring-cloud-starter-security",
+			// for sample controller in gateway
+			"org.springframework.boot:spring-boot-starter-thymeleaf",
+			"org.thymeleaf.extras:thymeleaf-extras-springsecurity5",
+			//Spring Cloud - Sleuth - Zipkin - Tracing
+			'org.springframework.cloud:spring-cloud-starter-sleuth',
+			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
+			'org.springframework.cloud:spring-cloud-sleuth-core')
+}
+
 
 // Runnable Jar
 bootJar {
