--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 			'org.springframework.cloud:spring-cloud-sleuth-zipkin',
 			'org.springframework.cloud:spring-cloud-sleuth-core',
 			'io.pivotal.spring.cloud:spring-cloud-sso-connector:2.1.3.RELEASE',
+			'org.springframework.security:spring-security-oauth2-resource-server',
+			'org.springframework.security:spring-security-oauth2-jose',
 			
 			//'org.springframework.security:spring-security-oauth2-resource-server',
 			//'org.springframework.security:spring-security-oauth2-jose',
