--- a/bin/main/bootstrap.yml
+++ b/bin/main/bootstrap.yml
@@ -1,5 +1,14 @@
-server:
-  port: 8080
+spring:
+  profiles: test
+  cloud:
+    config:
+      uri:
+      - http://mdv-docdevl01:8888
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://mdv-docdevl01:8761/eureka
+---
 
 logging:
   level:
@@ -9,26 +18,13 @@ logging:
     org.springframework.security.oauth2: INFO
     org.springframework.cloud.gateway: TRACE
 
-client-id: d7423b4a-6413-46f7-aa14-15052e3d10be
-client-secret: a9031c20-3b55-4ebd-8720-081cfff47567
 spring:
+  application:
+    name: customer-portal-bff
+  main:
+    allow-bean-definition-overriding: true
   autoconfigure:
     # TODO: remove when fixed https://github.com/spring-projects/spring-security/issues/6314
     exclude: org.springframework.boot.actuate.autoconfigure.security.reactive.ReactiveManagementWebSecurityAutoConfiguration
   thymeleaf:
-    cache: false
-  security:
-    oauth2:
-      client:
-        registration:
-          login-client:
-            client-id: d7423b4a-6413-46f7-aa14-15052e3d10be
-            client-secret: 2c35346d-39f0-4cb5-a8b8-bd1cccc8c6b1
-            authorization-grant-type: client_credentials
-        provider:
-          login-client:    
-            token-uri: https://external-dev.login.sys.nonprod.us-east-1.aws.pcf.mapfreusa.com/oauth/token
-      resourceserver:
-        jwt:
-          jwk-set-uri: https://external-dev.login.sys.nonprod.us-east-1.aws.pcf.mapfreusa.com/token_keys 
-       
+    cache: false       
