--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,10 @@ dependencies {
 			//'org.springframework.cloud:spring-cloud-starter-oauth2'
     		//'org.springframework.cloud:spring-cloud-cloudfoundry-connector:1.2.0.RELEASE',
     		//'io.pivotal.spring.cloud:spring-cloud-sso-connector:1.1.0.RELEASE'
-			)
+			
 			// PCF Specific Dependencies
-			//'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+			'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry',
+			'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
 	
 	testCompile('org.springframework.boot:spring-boot-starter-test',
 			'org.springframework.security:spring-security-test',
