--- a/bin/main/bootstrap.yml
+++ b/bin/main/bootstrap.yml
@@ -12,7 +12,7 @@ eureka:
 
 logging:
   level:
-    root: DEBUG
+    root: ERROR
     org.springframework.web: ERROR
     org.springframework.security: ERROR
     org.springframework.security.oauth2: ERROR
